Fixes nav slider issue on mobile webkit browsers
Closes #80

--- a/src/assets/scss/bill-rtl.scss
+++ b/src/assets/scss/bill-rtl.scss
@@ -462,6 +462,9 @@
 
 
 				> .inner{
+					left:auto;
+					right:0;
+
 					ul,
 					ul.left,
 					ul.left ul{
